# zoomcamp-ML

./: RF_DT_homework_06.ipynb  homework-02.ipynb  homework-03.ipynb  model_evaluation.ipynb
homework-05/: Dockerfile  app.py  pyproject.toml  requirements.txt  score_lead.py  test_client.py
